# sycamorein100

./: README.md  cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/app/: main.rs
frontend/src/lib/: components.rs  mod.rs  routes.rs
frontend/src/lib/components/: footer.rs  header.rs  mod.rs  navigation.rs
frontend/src/lib/domain/: data.rs
frontend/src/lib/routes/: about.rs  home.rs  mod.rs  projects.rs  router.rs  writing.rs
server/: Cargo.toml
server/src/: main.rs
