[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "frontend_app"
path = "src/app/main.rs"

[lib]
name = "frontend_lib"
path = "src/lib/mod.rs"

[dependencies]
sycamore = "0.8"
sycamore-router = "0.8"
chrono = "0.4.22"

